--- a/dashboard-angular/src/app/Employee/get-employee/get-employee.component.html
+++ b/dashboard-angular/src/app/Employee/get-employee/get-employee.component.html
@@ -9,7 +9,7 @@
       <p><span class="detail-label">Nombre d'événements auxquels a participé :</span> {{ numberOfEventsParticipated }}</p>
       <p><span class="detail-label">Nombre des formations auxquels a participé :</span> {{ NumberOfformationsParticipated }}</p>
       <p><span class="detail-label">Total des jours de congé :</span> {{ totalJoursConges }}</p>
-      <p><span class="detail-label">Nombre d'heures travaillées du Planning :</span> {{ numberOfHoursWorked }}</p>
+      <p><span class="detail-label">Nombre d'heures travaillées du Projet :</span> {{ numberOfHoursWorked }}</p>
     </mat-card-content>
   </mat-card>
   
