--- a/dashboard-angular/src/app/User/user-register/user-register.component.html
+++ b/dashboard-angular/src/app/User/user-register/user-register.component.html
@@ -92,7 +92,7 @@
                     </form>
                     <span class="d-block text-center mt-3">
                         Vous avez déjà un compte ?
-                        <a href="https://192.168.1.100:5000/login" class="text-decoration-none">
+                        <a href="http://localhost:5000/login" class="text-decoration-none">
                             Se connecter
                         </a>
                     </span>
