--- a/home-angular/src/app/Components/loginpage/loginpage.component.html
+++ b/home-angular/src/app/Components/loginpage/loginpage.component.html
@@ -21,10 +21,10 @@
       <!-- Boutons -->
       <div class="btn">
         <button class="button1" (click)="login()">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Connexion&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
-        <a class="button2" href="http://localhost:4200/register">S'inscrire</a>
+        <a class="button2" href="https://192.168.1.100:4200/register">S'inscrire</a>
       </div>
       <!-- Liens -->
-      <a class="button3" href="http://localhost:4200/resetpassSMS">Mot de passe oublié</a>
+      <a class="button3" href="https://192.168.1.100:4200/resetpassSMS">Mot de passe oublié</a>
       <a href="http://localhost:4200/login">Êtes-vous un employé ?</a>
     </form>
   </div>
