--- a/home-angular/src/app/Components/loginpage/loginpage.component.html
+++ b/home-angular/src/app/Components/loginpage/loginpage.component.html
@@ -25,7 +25,7 @@
       </div>
       <!-- Liens -->
       <a class="button3" href="https://192.168.1.100:4200/resetpassSMS">Mot de passe oublié</a>
-      <a href="http://localhost:4200/login">Êtes-vous un employé ?</a>
+      <a href="https://192.168.1.100:4200/login">Êtes-vous un employé ?</a>
     </form>
   </div>
 </div>
